--- a/VeloNews/VeloNews.csproj
+++ b/VeloNews/VeloNews.csproj
@@ -11,6 +11,7 @@
     <Folder Include="wwwroot\css\froala\" />
     <Folder Include="wwwroot\images\uploads\news\" />
     <Folder Include="wwwroot\images\uploads\pictures\" />
+    <Folder Include="wwwroot\images\seedImages\" />
     <Folder Include="wwwroot\js\froala\" />
   </ItemGroup>
 
