update profile page

--- a/VeloNews/VeloNews.csproj
+++ b/VeloNews/VeloNews.csproj
@@ -10,8 +10,12 @@
     <Folder Include="wwwroot\css\froala\" />
     <Folder Include="wwwroot\images\uploads\news\" />
     <Folder Include="wwwroot\images\uploads\pictures\" />
-    <Folder Include="wwwroot\images\seedImages\" />
+    <Folder Include="wwwroot\images\userProfileImages\" />
     <Folder Include="wwwroot\js\froala\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ISO3166" Version="1.0.4" />
   </ItemGroup>
 
   <ItemGroup>
