--- a/VeloNews/appsettings.json
+++ b/VeloNews/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token":  "veloNews top secret token"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
